[package]
name = "mist"
version = "0.1.0"
authors = ["Eishun Kondoh <shun3382@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
log = "0.4"
pretty_env_logger = "0.3"
prettytable-rs = "^0.8"
reqwest = { version = "0.10.9", features = ["cookies", "json", "blocking"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
